--- a/manifest.json
+++ b/manifest.json
@@ -8,9 +8,9 @@
     "orientation": "portrait-primary",
     "icons": [
         {
-            "src": "/img/bg.jpg",
-            "type": "image/png",
-            "sizes": "72x72" 
+            "src": "img/launcher.png",
+            "sizes": "192x192",
+            "type": "image/png"
         }
     ]
 }
